--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   google_fonts: ^6.2.1
+  async_wallpaper: ^2.1.0
 
 dev_dependencies:
   flutter_test:
